--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         <section class="container_card">
           <div class="card_container flex card_container_index">
             <h2 class="fs_largebold absolute">Restaurant</h2>
-            <a href="/menu.html"
-              ><div class="card">
+            <a href="/menu.html"  class="index_card">
+              <div class="card">
                 <div class="img_container img_gout flex">
                   <div class="new flex">
                     <span class="fs_smallbold fs_bold">Nouveau</span>
@@ -92,10 +92,34 @@
                 <span class="fs_reset mrg_card_top mrg_card_left"
                   >Ménilmontant</span
                 >
-                <i class="far fa-heart"></i></div
+                <div class="heart">
+                  <svg
+                    class="filled"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"
+                    />
+                  </svg>
+                  <svg
+                    class="empty"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                  >
+                    <path
+                      d="M12 21.593c-5.63-5.539-11-10.297-11-14.402 0-3.791 3.068-5.191 5.281-5.191 1.312 0 4.151.501 5.719 4.457 1.59-3.968 4.464-4.447 5.726-4.447 2.54 0 5.274 1.621 5.274 5.181 0 4.069-5.136 8.625-11 14.402m5.726-20.583c-2.203 0-4.446 1.042-5.726 3.238-1.285-2.206-3.522-3.248-5.719-3.248-3.183 0-6.281 2.187-6.281 6.191 0 4.661 5.571 9.429 12 15.809 6.43-6.38 12-11.148 12-15.809 0-4.011-3.095-6.181-6.274-6.181"
+                    />
+                  </svg>
+                </div></div
             ></a>
 
-            <a href="/menu1.html">
+            <a href="/menu1.html" class="index_card" >
               <div class="card">
                 <div class="img_container img_note flex">
                   <div class="new flex">
@@ -107,10 +131,34 @@
                 <span class="fs_reset mrg_card_top mrg_card_left"
                   >Charonne</span
                 >
-                <i class="far fa-heart"></i></div
+                <div class ="heart">
+                  <svg
+                    class="filled"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"
+                    />
+                  </svg>
+                  <svg
+                    class="empty"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                  >
+                    <path
+                      d="M12 21.593c-5.63-5.539-11-10.297-11-14.402 0-3.791 3.068-5.191 5.281-5.191 1.312 0 4.151.501 5.719 4.457 1.59-3.968 4.464-4.447 5.726-4.447 2.54 0 5.274 1.621 5.274 5.181 0 4.069-5.136 8.625-11 14.402m5.726-20.583c-2.203 0-4.446 1.042-5.726 3.238-1.285-2.206-3.522-3.248-5.719-3.248-3.183 0-6.281 2.187-6.281 6.191 0 4.661 5.571 9.429 12 15.809 6.43-6.38 12-11.148 12-15.809 0-4.011-3.095-6.181-6.274-6.181"
+                    />
+                  </svg>
+                </div></div
             ></a>
 
-            <a href="/menu2.html">
+            <a href="/menu2.html" class="index_card" >
               <div class="card">
                 <div class="img_container img_française">
                   <div class="new flex hidden">
@@ -122,9 +170,33 @@
                 <span class="fs_reset mrg_card_top mrg_card_left"
                   >Cité rouge</span
                 >
-                <i class="far fa-heart"></i></div
+                <div class ="heart">
+                  <svg
+                    class="filled"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                  >
+                    <path
+                      d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"
+                    />
+                  </svg>
+                  <svg
+                    class="empty"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                  >
+                    <path
+                      d="M12 21.593c-5.63-5.539-11-10.297-11-14.402 0-3.791 3.068-5.191 5.281-5.191 1.312 0 4.151.501 5.719 4.457 1.59-3.968 4.464-4.447 5.726-4.447 2.54 0 5.274 1.621 5.274 5.181 0 4.069-5.136 8.625-11 14.402m5.726-20.583c-2.203 0-4.446 1.042-5.726 3.238-1.285-2.206-3.522-3.248-5.719-3.248-3.183 0-6.281 2.187-6.281 6.191 0 4.661 5.571 9.429 12 15.809 6.43-6.38 12-11.148 12-15.809 0-4.011-3.095-6.181-6.274-6.181"
+                    />
+                  </svg>
+                </div></div
             ></a>
-            <a href="/menu3.html">
+            <a href="/menu3.html" class="index_card"> 
               <div class="card">
                 <div class="img_container img_delice">
                   <div class="new flex hidden">
@@ -136,7 +208,37 @@
                 <span class="fs_reset mrg_card_top mrg_card_left"
                   >Folie-Méricourt</span
                 >
-                <i class="far fa-heart"></i></div
+                <div class ="heart">
+                  <svg
+                    class="filled"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    viewBox="0 0 24 24"
+                  >
+                  <defs>
+                    <linearGradient id="MyGradient" x1="0" x2="0" y1="0" y2="1">
+                      <stop offset="5%" stop-color="#9356dc" />
+                      <stop offset="95%" stop-color="#ff79da" />
+                    </linearGradient>
+                  </defs>
+                    <path
+                      d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"
+                    />
+                  </svg>
+                  <svg
+                    class="empty"
+                    xmlns="http://www.w3.org/2000/svg"
+                    width="24"
+                    height="24"
+                    fill-rule="evenodd"
+                    clip-rule="evenodd"
+                  >
+                    <path
+                      d="M12 21.593c-5.63-5.539-11-10.297-11-14.402 0-3.791 3.068-5.191 5.281-5.191 1.312 0 4.151.501 5.719 4.457 1.59-3.968 4.464-4.447 5.726-4.447 2.54 0 5.274 1.621 5.274 5.181 0 4.069-5.136 8.625-11 14.402m5.726-20.583c-2.203 0-4.446 1.042-5.726 3.238-1.285-2.206-3.522-3.248-5.719-3.248-3.183 0-6.281 2.187-6.281 6.191 0 4.661 5.571 9.429 12 15.809 6.43-6.38 12-11.148 12-15.809 0-4.011-3.095-6.181-6.274-6.181"
+                    />
+                  </svg>
+                </div></div
             ></a>
           </div>
         </section>
