--- a/menu1.html
+++ b/menu1.html
@@ -44,26 +44,38 @@
         grid
       "
     >
-      <h2 class="ffm fs_largebold absolute_title">La note enchantée</h2>
-      <svg id="heart" height="0" width="0">
-        <defs>
-          <clipPath id="svgPath" class="svg_size">
-            <path
-              d="M20,35.09,4.55,19.64a8.5,8.5,0,0,1-.13-12l.13-.13a8.72,8.72,0,0,1,12.14,0L20,10.79l3.3-3.3a8.09,8.09,0,0,1,5.83-2.58,8.89,8.89,0,0,1,6.31,2.58,8.5,8.5,0,0,1,.13,12l-.13.13Z"
-            />
-          </clipPath>
-        </defs>
+    <h2 class="ffm fs_largebold absolute_title">La note enchantée <div class="heart heart_menu">
+      <svg
+        class="filled"
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        viewBox="0 0 24 24"
+      >
+        <path
+          d="M12 4.248c-3.148-5.402-12-3.825-12 2.944 0 4.661 5.571 9.427 12 15.808 6.43-6.381 12-11.147 12-15.808 0-6.792-8.875-8.306-12-2.944z"
+        />
       </svg>
-
-      <div class="container">
-        <svg width="40" height="40" viewBox="0 0 40 40" class="stroke">
-          <path
-            d="M20,35.07,4.55,19.62a8.5,8.5,0,0,1-.12-12l.12-.12a8.72,8.72,0,0,1,12.14,0L20,10.77l3.3-3.3A8.09,8.09,0,0,1,29.13,4.9a8.89,8.89,0,0,1,6.31,2.58,8.5,8.5,0,0,1,.12,12l-.12.12ZM10.64,7.13A6.44,6.44,0,0,0,6.07,18.19L20,32.06,33.94,18.12A6.44,6.44,0,0,0,34,9l0,0a6.44,6.44,0,0,0-4.77-1.85A6,6,0,0,0,24.83,9L20,13.78,15.21,9A6.44,6.44,0,0,0,10.64,7.13Z"
-          />
-        </svg>
-
-        <a href="#" class="clip"></a>
-      </div>
+      <svg
+        class="empty"
+        xmlns="http://www.w3.org/2000/svg"
+        width="24"
+        height="24"
+        fill-rule="evenodd"
+        clip-rule="evenodd"
+      >
+      <defs>
+        <linearGradient id="MyGradient" x1="0" x2="0" y1="0" y2="1">
+          <stop offset="5%" stop-color="#9356dc" />
+          <stop offset="95%" stop-color="#ff79da" />
+        </linearGradient>
+      </defs>
+        <path
+          d="M12 21.593c-5.63-5.539-11-10.297-11-14.402 0-3.791 3.068-5.191 5.281-5.191 1.312 0 4.151.501 5.719 4.457 1.59-3.968 4.464-4.447 5.726-4.447 2.54 0 5.274 1.621 5.274 5.181 0 4.069-5.136 8.625-11 14.402m5.726-20.583c-2.203 0-4.446 1.042-5.726 3.238-1.285-2.206-3.522-3.248-5.719-3.248-3.183 0-6.281 2.187-6.281 6.191 0 4.661 5.571 9.429 12 15.809 6.43-6.38 12-11.148 12-15.809 0-4.011-3.095-6.181-6.274-6.181"
+        />
+      </svg>
+    </div></h2>
+    
       <div
         class="
           menu_container
